--- a/style2.css
+++ b/style2.css
@@ -14,13 +14,10 @@ h1 {
   font-family: cursive;
   font-weight: 1000;
   font-size: 45px;
-}
-
-h3 {
   display: inline;
 }
 
-h1 {
+h3 {
   display: inline;
 }
 
@@ -41,10 +38,12 @@ h1 {
   justify-content: space-between;
 }
 
+/*Code for nav bar adapted form Flexbox guide examples: https://css-tricks.com/snippets/css/a-guide-to-flexbox/*/
+
 .nav {
   display: flex;
   flex-direction: row;
-  background: black;
+  /*background: black;*/
   justify-content: space-between;
   align-items: center;
 }
@@ -57,7 +56,7 @@ nav ul {
 
 nav ul a {
   display: block;
-  /*padding: 1em;*/
+  padding: 1em;
   text-decoration: none;
   font-size: 15px;
   color: white;
@@ -89,11 +88,11 @@ nav ul a:hover {
   flex-direction: row;
   justify-content: space-between;
   margin: 0;
+  align-items: center;
 }
 
 footer ul {
   display: flex;
-  justify-content: space-around;
   flex-direction: row;
 }
 
@@ -106,12 +105,22 @@ footer ul a:hover {
   background-color: green;
 }
 
-footer div p {
-  padding: 5px;
-}
-
 /* Referenced https://www.w3schools.com/css/css3_buttons.asp for button styling, as well as
-https://www.w3schools.com/cssref/css3_pr_border-radius.asp */
+https://www.w3schools.com/cssref/css3_pr_border-radius.asp in order to design input, form and button */
+
+
+#form {
+  background-color: rgba(0,0,0,0.70);
+  padding: 25px;
+  margin-left: 500px;
+  margin-right: 500px;
+  border-radius: 15px;
+  color: white;
+  /*display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;*/
+}
 
 #button {
   background-color: green;
@@ -119,9 +128,8 @@ https://www.w3schools.com/cssref/css3_pr_border-radius.asp */
   color: white;
   padding: 15px 32px;
   text-align: center;
-  display: inline-block;
   border-radius: 15px;
-  font-size: 15px
+  font-size: 15px;
 }
 
 #input {
@@ -129,28 +137,21 @@ https://www.w3schools.com/cssref/css3_pr_border-radius.asp */
   color: black;
   padding: 15px 32px;
   text-align: center;
-  display: inline-block;
   border-radius: 15px;
   font-size: 15px;
 }
 
-/* Used this site to figure out parameters for the box shadow http://www.cssmatic.com/box-shadow */
-
-#form {
-  background-color: rgba(0,0,0,0.70);
-  padding: 30px;
-  margin-left: 500px;
-  margin-right: 500px;
-  border-radius: 10px;
-  color: white;
-}
+/*#wrap {
+  flex-basis: 100%;
+}*/
 
 #motto {
   color: white;
 }
 
-#product {
-  border: 2px solid white;
+#signup {
+  border: 1.5px solid white;
+  border-radius: 5px;
 }
 
 @media only screen and (max-width: 640px) {
@@ -169,11 +170,37 @@ https://www.w3schools.com/cssref/css3_pr_border-radius.asp */
     flex-direction: column;
   }
 
+  #button {
+    background-color: green;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 15px;
+    font-size: 15px;
+    width: 100%;
+  }
+
+  #input {
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 15px;
+    font-size: 15px;
+    min-width: 200px;
+
+  }
+
   .flex-container1 {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+
+  /*Gradient code adapted form - https://developer.mozilla.org/en-US/docs/Web/CSS/linear-gradient*/
 
   .flex-container2 {
     background: linear-gradient(to top, black, rgba(0,0,0,0));
